manifests/overlays/demo/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: smrt-saas-web-ingress
spec:
  podSelector:
    matchLabels:
      app: smrt-saas-web
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nginx-ingress
      ports:
        - protocol: TCP
          port: 3000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: smrt-saas-postgres-ingress
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: smrt-saas-postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: smrt-saas-web
      ports:
        - protocol: TCP
          port: 5432
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgresql-operator
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8000
